# libcangjie

./: .gitignore  .travis.yml  INSTALL.md  Makefile.am  README.md  configure.ac
overrides/python/: Cangjie.py
src/: cangjie-char.c  cangjie-char.h  cangjie-enum.c  cangjie-enum.h  cangjie.c  cangjie.h
tests/: cangjie-char.c  cangjie.c
