# Point to our macro directory and pick up user flags from the environment
ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}


# -- Library -------------------------
lib_LTLIBRARIES = libcangjie.la

libcangjie_la_LDFLAGS = -version-info $(CANGJIE_SO_VERSION) $(GCOV_LDFLAGS)
libcangjie_la_SOURCES = \
	src/cangjie-char.c \
	$(NULL)
libcangjie_la_CFLAGS = $(glib2_CFLAGS)
libcangjie_la_LIBADD = $(glib2_LIBS)
libcangjie_la_include_HEADERS = \
	src/cangjie-char.h \
	$(NULL)
libcangjie_la_includedir = $(includedir)/cangjie


# -- Introspection -------------------
introspection_files = $(libcangjie_la_SOURCES) $(libcangjie_la_include_HEADERS)

Cangjie-2.0.gir: $(INTROSPECTION_SCANNER) libcangjie.la Makefile
Cangjie_2_0_gir_NAMESPACE = Cangjie
Cangjie_2_0_gir_VERSION = $(VERSION)
Cangjie_2_0_gir_SCANNERFLAGS = \
	--warn-all \
	$(NULL)
Cangjie_2_0_gir_CFLAGS = \
	$(AM_CPPFLAGS) \
	$(glib2_CFLAGS) \
	$(NULL)

Cangjie_2_0_gir_INCLUDES = GObject-2.0
Cangjie_2_0_gir_PACKAGES = gobject-2.0
Cangjie_2_0_gir_LIBS = libcangjie.la
Cangjie_2_0_gir_FILES = $(introspection_files)
Cangjie_2_0_gir_EXPORT_PACKAGES = cangjie
INTROSPECTION_GIRS = Cangjie-2.0.gir

girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibsdir = $(libdir)/girepository-1.0
typelibs_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)


# -- Data ----------------------------
pkgconfig_DATA = data/cangjie.pc
pkgconfigdir = $(libdir)/pkgconfig


# -- Unit tests ----------------------
noinst_PROGRAMS = $(TEST_PROGS)
TEST_PROGS = tests/cangjie-char

tests_cangjie_char_LDADD = libcangjie.la
tests_cangjie_char_CFLAGS = $(glib2_CFLAGS)

check-local: $(TEST_PROGS)
	$(GTESTER) --verbose $(TEST_PROGS)


# -- Misc ----------------------------
AUTHORS:
	@if test -d "$(srcdir)/.git"; then \
	    echo Creating $@ && \
	    ( cd "$(top_srcdir)" && \
	      echo -e '# Generated by Makefile. Do not edit.\n#'; \
	      echo -e '# libcangjie was written by these people:\n'; \
	      git log --no-merges --pretty=format:"%an <%ae>" \
	          | sort | uniq; \
	      echo -e "\n# libcangjie would not have been possible without Wan Leung Wong's work on the"; \
	      echo -e '# original libcangjie: https://github.com/wanleung/libcangjie'; \
	    ) > $@.tmp && mv -f $@.tmp $@ \
	    || ( rm -f $@.tmp ; echo Failed to generate $@ >&2 ); \
	fi


# -- Common --------------------------
-include $(INTROSPECTION_MAKEFILE)
AM_CPPFLAGS = -I$(top_srcdir)/src
AM_CFLAGS = -Wall -Wdeclaration-after-statement

CLEANFILES = \
	AUTHORS \
	data/cangjie.pc \
	$(gir_DATA) \
	$(typelibs_DATA) \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	data/README.table.md \
	data/table.txt \
	INSTALL.md \
	README.md \
	$(NULL)

.PHONY: AUTHORS
